# vectorscan-rs

./: .gitmodules  Cargo.toml  LICENSE-MIT  NOTICE  README.md
vectorscan-rs/: Cargo.toml
vectorscan-rs-cdylib/: Cargo.toml  build.rs
vectorscan-rs-cdylib/src/: lib.rs
vectorscan-rs-sys/: Cargo.toml  README.md  build.rs  vectorscan-windows.patch  vectorscan.patch
vectorscan-rs-sys/patches/: 01-static-dispatch.patch  02-remove-ifunc-and-linux-only.patch  03-build-wrapper-mingw.patch  04-pkgconfig-extra-libs.patch  05-pkgconfig-quiet.patch
vectorscan-rs/src/: native.rs  wrapper.rs
