[workspace]
members = ["vectorscan-rs", "vectorscan-rs-sys", "vectorscan-rs-cdylib"]
resolver = "2"

[profile.release.package.vectorscan-rs-cdylib]
debug = true

[workspace.package]

version = "0.0.5"

license = "Apache-2.0 OR MIT"
authors = ["Brad Larsen <brad@bradfordlarsen.com>"]

edition = "2021"
rust-version = "1.87"

repository = "https://github.com/bradlarsen/vectorscan-rs"

keywords = ["ffi", "bindings", "text", "regex"]
categories = ["api-bindings", "parsing", "text-processing"]
